--- a/index.html
+++ b/index.html
@@ -1,28 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APPK</title>
-    <link rel="stylesheet" href="design.css">
-</head>
-<body>
+    <link rel="stylesheet" href="design.css" />
+  </head>
+  <body>
     <div id="container">
-        <div class="inpCont">
-            <input type="text" name="" id="inp1" placeholder="Encrypt message........">
-            <svg onclick="copyToClipboard('#inp1')" viewBox="-2.4 -2.4 28.80 28.80" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.192"></g><g id="SVGRepo_iconCarrier"> <path d="M3 16V4C3 2.89543 3.89543 2 5 2H15M9 22H18C19.1046 22 20 21.1046 20 20V8C20 6.89543 19.1046 6 18 6H9C7.89543 6 7 6.89543 7 8V20C7 21.1046 7.89543 22 9 22Z" stroke="#ffffff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>        
-        </div>
-            <div class="inpCont">
-                <input type="text" name="" id="inp2" placeholder="Decrypt message........">
-                <svg onclick="copyToClipboard('#inp2')" viewBox="-2.4 -2.4 28.80 28.80" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.192"></g><g id="SVGRepo_iconCarrier"> <path d="M3 16V4C3 2.89543 3.89543 2 5 2H15M9 22H18C19.1046 22 20 21.1046 20 20V8C20 6.89543 19.1046 6 18 6H9C7.89543 6 7 6.89543 7 8V20C7 21.1046 7.89543 22 9 22Z" stroke="#ffffff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>                
-            </div>
-        <span id="balls"></span>
-        <!-- <span id="balls"></span> -->
-        <!-- <span id="balls"></span> -->
+      <!-- <div id="inpHold"> -->
+      <div class="inpCont">
+        <label for="inp1">Encrypt your text</label>
+        <input
+          type="text"
+          name=""
+          id="inp1"
+          onchange="encrypt()"
+          
+        />
+        <svg
+          onclick="copyToClipboard('#inp1')"
+          viewBox="-3.12 -3.12 30.24 30.24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          stroke="#000000ff"
+          stroke-width="0.00024000000000000003"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M21 8C21 6.34315 19.6569 5 18 5H10C8.34315 5 7 6.34315 7 8V20C7 21.6569 8.34315 23 10 23H18C19.6569 23 21 21.6569 21 20V8ZM19 8C19 7.44772 18.5523 7 18 7H10C9.44772 7 9 7.44772 9 8V20C9 20.5523 9.44772 21 10 21H18C18.5523 21 19 20.5523 19 20V8Z"
+              fill="#333"
+            ></path>
+            <path
+              d="M6 3H16C16.5523 3 17 2.55228 17 2C17 1.44772 16.5523 1 16 1H6C4.34315 1 3 2.34315 3 4V18C3 18.5523 3.44772 19 4 19C4.55228 19 5 18.5523 5 18V4C5 3.44772 5.44772 3 6 3Z"
+              fill="#333"
+            ></path>
+          </g>
+        </svg>
+      </div>
+      <!-- </div> -->
+      <div class="inpCont">
+        <label for="inp2">Decrypt your text</label>
+        <input
+          onchange="decrypt()"
+          type="text"
+          name=""
+          id="inp2"
+        />
+        <svg
+          onclick="copyToClipboard('#inp2')"
+          viewBox="-3.12 -3.12 30.24 30.24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          stroke="#333"
+          stroke-width="0.00024000000000000003"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M21 8C21 6.34315 19.6569 5 18 5H10C8.34315 5 7 6.34315 7 8V20C7 21.6569 8.34315 23 10 23H18C19.6569 23 21 21.6569 21 20V8ZM19 8C19 7.44772 18.5523 7 18 7H10C9.44772 7 9 7.44772 9 8V20C9 20.5523 9.44772 21 10 21H18C18.5523 21 19 20.5523 19 20V8Z"
+              fill="#333"
+            ></path>
+            <path
+              d="M6 3H16C16.5523 3 17 2.55228 17 2C17 1.44772 16.5523 1 16 1H6C4.34315 1 3 2.34315 3 4V18C3 18.5523 3.44772 19 4 19C4.55228 19 5 18.5523 5 18V4C5 3.44772 5.44772 3 6 3Z"
+              fill="#333"
+            ></path>
+          </g>
+        </svg>
+      </div>
+      <!--? <div id="btnCont">
+        <button onclick="encryptMessage()">Encrypt</button>
+        <button onclick="decrypt()">Decrypt</button>
+      </div> -->
 
+      <span id="balls"></span>
+      <!-- <span id="balls"></span> -->
+      <!-- <span id="balls"></span> -->
     </div>
 
-
     <script src="logic.js"></script>
-</body>
+  </body>
 </html>
