--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <body>
     <div id="container">
       <!-- <div id="inpHold"> -->
+      <p id="encrypt">encrypt</p>
       <div class="inpCont">
         <label for="inp1">Encrypt your text</label>
         <input
           type="text"
           name=""
           id="inp1"
-          onchange="encrypt()"
-          
+          oninput="encrypt()"
+          placeholder="Encrypt your text"
         />
         <svg
           onclick="copyToClipboard('#inp1')"
@@ -37,7 +38,7 @@
               fill-rule="evenodd"
               clip-rule="evenodd"
               d="M21 8C21 6.34315 19.6569 5 18 5H10C8.34315 5 7 6.34315 7 8V20C7 21.6569 8.34315 23 10 23H18C19.6569 23 21 21.6569 21 20V8ZM19 8C19 7.44772 18.5523 7 18 7H10C9.44772 7 9 7.44772 9 8V20C9 20.5523 9.44772 21 10 21H18C18.5523 21 19 20.5523 19 20V8Z"
-              fill="#333"
+              fill="#000000"
             ></path>
             <path
               d="M6 3H16C16.5523 3 17 2.55228 17 2C17 1.44772 16.5523 1 16 1H6C4.34315 1 3 2.34315 3 4V18C3 18.5523 3.44772 19 4 19C4.55228 19 5 18.5523 5 18V4C5 3.44772 5.44772 3 6 3Z"
@@ -47,13 +48,15 @@
         </svg>
       </div>
       <!-- </div> -->
+      <p id="decrypt">decrypt:</p>
       <div class="inpCont">
         <label for="inp2">Decrypt your text</label>
         <input
-          onchange="decrypt()"
+          oninput="decrypt()"
           type="text"
           name=""
           id="inp2"
+          placeholder="Decrypt your text"
         />
         <svg
           onclick="copyToClipboard('#inp2')"
@@ -74,7 +77,7 @@
               fill-rule="evenodd"
               clip-rule="evenodd"
               d="M21 8C21 6.34315 19.6569 5 18 5H10C8.34315 5 7 6.34315 7 8V20C7 21.6569 8.34315 23 10 23H18C19.6569 23 21 21.6569 21 20V8ZM19 8C19 7.44772 18.5523 7 18 7H10C9.44772 7 9 7.44772 9 8V20C9 20.5523 9.44772 21 10 21H18C18.5523 21 19 20.5523 19 20V8Z"
-              fill="#333"
+              fill="#000000"
             ></path>
             <path
               d="M6 3H16C16.5523 3 17 2.55228 17 2C17 1.44772 16.5523 1 16 1H6C4.34315 1 3 2.34315 3 4V18C3 18.5523 3.44772 19 4 19C4.55228 19 5 18.5523 5 18V4C5 3.44772 5.44772 3 6 3Z"
